--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300');
+    </style>
     <title>React App with Movie API</title>
   </head>
   <body>
